Modificatstyle improvementsion styles

--- a/frontend/src/App/App.css
+++ b/frontend/src/App/App.css
@@ -10,5 +10,9 @@ body, #root{
   height: 100vh;
   font-family: Quicksand;
   font-size: large;
+  flex: 1;
 }
-
+a {
+  text-decoration: none;
+  color:deeppink;
+}
