--- a/frontend/src/components/Layout/Layout.css
+++ b/frontend/src/components/Layout/Layout.css
@@ -3,7 +3,8 @@ main {
     margin: 0 auto;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     max-width: 990px;
-    gap: 10px;
+    padding: 3rem;
+    padding-top: 80px;
+    min-height: 76%;
 }
