--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -10,12 +10,12 @@
 }
 
 .presentation-section {
-  background: linear-gradient(to right, var(--background-color), rgba(255, 255, 255, 0.596)), url('./presentation-background.png');
+  background: linear-gradient(to right, var(--background-color), rgba(255, 255, 255, 0.596)), url('https://zuros.xyz/presentation-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   padding: 30px;
   width: 100%;
-margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .presentation-section div {
