--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -8,7 +8,9 @@
   display: flex;
   gap: 30px;
 }
-
+.vision-cards {
+flex-wrap: wrap;
+}
 .presentation-section {
   background: linear-gradient(to right, var(--background-color), rgba(255, 255, 255, 0.596)), url('https://zuros.xyz/presentation-background.png');
   background-repeat: no-repeat;
