--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -10,6 +10,10 @@
 }
 .vision-cards {
 flex-wrap: wrap;
+justify-content: center;
+}
+.vision-column {
+  max-width: 300px;
 }
 .presentation-section {
   background: linear-gradient(to right, var(--background-color), rgba(255, 255, 255, 0.596)), url('https://zuros.xyz/presentation-background.png');
