Changed background image URL on the website

--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -16,7 +16,7 @@ justify-content: center;
   max-width: 300px;
 }
 .presentation-section {
-  background: linear-gradient(to right, #fdf2f8, #fdf2f88e), url('http://localhost:5173/presentation-background.png');
+  background: linear-gradient(to right, #fdf2f8, #fdf2f88e), url('https://zuros.xyz/presentation-background.png');
   background-repeat: no-repeat;
   border-radius: 20px;
   background-size:auto;
