--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -8,18 +8,22 @@
   display: flex;
   gap: 30px;
 }
+
 .vision-cards {
-flex-wrap: wrap;
-justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 .vision-column {
   max-width: 300px;
 }
+
 .presentation-section {
-  background: linear-gradient(to right, #fdf2f8, #fdf2f88e), url('https://zuros.xyz/presentation-background.png');
+  background: linear-gradient(to right, #fdf2f8, #fdf2f88e), url('http://localhost:5174/img/zuros-background.webp');
   background-repeat: no-repeat;
+  
   border-radius: 20px;
-  background-size:auto;
+  background-size: cover;
   padding: 30px;
   width: 100%;
   margin-bottom: 40px;
@@ -31,9 +35,10 @@ justify-content: center;
 
 @media screen and (max-width: 600px) {
   .presentation-section {
-      width: 100%;
-      border-radius: 0px;
-    }
+    width: 100%;
+    border-radius: 0px;
+  }
+
   .presentation-section div {
     width: 100%;
   }
@@ -55,4 +60,84 @@ justify-content: center;
 
 .pink-button:hover {
   background-color: rgb(253, 149, 205);
+}
+
+
+
+
+
+.hero-content {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  gap: 40px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .hero-content {
+    flex-direction: column-reverse;
+  }
+}
+
+.hero-image-section {
+  width: 100%;
+  max-width: 500px;
+  position: relative;
+}
+
+.hero-gradient-bg {
+  background: linear-gradient(135deg, #f9a8d4, #c084fc);
+  border-radius: 20px;
+  transform: rotate(3deg);
+  position: absolute;
+  inset: 0;
+
+}
+
+.hero-image-wrapper {
+  position: relative;
+  border: 4px solid white;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.hero-image-box {
+  position: relative;
+  aspect-ratio: 4 / 3;
+}
+
+.hero-image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.hero-star-icon {
+  position: absolute;
+  bottom: -16px;
+  right: -16px;
+  background: white;
+  padding: 10px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  color: gold;
+}
+
+.hero-text-section {
+    width: 100%;
+      height: 100%;
+  max-width: 490px;
+}
+
+.hero-text-section h2 {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.hero-text-section p {
+  margin-bottom: 20px;
+  line-height: 1.6;
 }
