--- a/frontend/src/components/HomeSections/Hero/styles.css
+++ b/frontend/src/components/HomeSections/Hero/styles.css
@@ -1,6 +1,87 @@
+.hero-content {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    gap: 40px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .hero-content {
+        flex-direction: column-reverse;
+    }
+}
+
+.hero-image-section {
+    width: 100%;
+    max-width: 500px;
+    position: relative;
+}
+
+.hero-gradient-bg {
+    background: linear-gradient(135deg, #f9a8d4, #c084fc);
+    border-radius: 20px;
+    transform: rotate(3deg);
+    position: absolute;
+    inset: 0;
+
+}
+
+.hero-image-wrapper {
+    position: relative;
+    border: 4px solid white;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
 .hero-image-box {
     position: relative;
     aspect-ratio: 4 / 3;
+}
+
+.hero-image-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.hero-star-icon {
+    position: absolute;
+    height: 26px;
+    width: 26px;
+    bottom: -16px;
+    right: -16px;
+    background: white;
+    padding: 0.5rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    color: gold;
+}
+
+.hero-text-section {
+    width: 100%;
+    height: 100%;
+    max-width: 490px;
+}
+
+.hero-text-section h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.hero-text-section p {
+    margin-bottom: 20px;
+    line-height: 1.6;
+}
+/* animates */
+.hero-image-box {
+    position: relative;
+    aspect-ratio: 4 / 3;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .hero-slide {
@@ -10,14 +91,31 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0;
-    transform: rotateX(90deg);
-    transform-origin: bottom;
-    transition: all 1s ease-in-out;
     backface-visibility: hidden;
 }
 
-.hero-slide.active {
-    opacity: 1;
-    transform: rotateX(0deg);
+.hero-slide.top {
+    transform-origin: top left;
+    filter: brightness(1);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
+}
+
+.animate-out {
+    animation: photoLift 1.2s ease forwards;
+}
+
+@keyframes photoLift {
+    0% {
+        opacity: 1;
+        transform: rotateX(0deg) rotateZ(0deg) scale(1);
+        filter: brightness(1);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
+    }
+
+    100% {
+        opacity: 0;
+        transform: rotateX(80deg) rotateZ(-10deg) scale(0.95);
+        filter: brightness(0.8);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0);
+    }
 }
